--- a/Lab5_Grzebyk_21236/my-app/src/App.css
+++ b/Lab5_Grzebyk_21236/my-app/src/App.css
@@ -20,7 +20,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -35,4 +34,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img{
+  max-width: 200px;
 }
